--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -7,9 +7,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-  
   steps:
-    - uses: actions/checkout@v2
+    - name: "Checkout repo"
+      uses: actions/checkout@v2
     
     # Set up Python 3
     - uses: actions/setup-python@v2
