--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
         run: python3 setup.py sdist bdist_wheel
     
       - name: "Release"
-        uses: relekang/python-semantic-release@master
+        uses: relekang/python-semantic-release@v7.28.1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           pypi_token: ${{ secrets.PYPI_TOKEN }}
