--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -31,3 +31,7 @@ jobs:
 
       - name: "Build"
         run: python3 setup.py sdist bdist_wheel
+
+      - name: "Integration Tests"
+        uses: actions/python-actions@v1
+
