adding env vars to gh actions

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -36,4 +36,10 @@ jobs:
         run: |
           pip install pytest
           pytest ./integration-tests/  
+        env:
+          BT_API_KEY: ${{ secrets.BT_API_KEY }}
+          BT_MANAGEMENT_API_KEY: ${{ secrets.BT_MANAGEMENT_API_KEY }}
+          BT_BILLING_API_KEY: ${{ secrets.BT_BILLING_API_KEY }}
+          BT_CARD_REACTOR_ID: ${{ secrets.BT_CARD_REACTOR_ID }}
+
 
