feat: adding integration tests (#24)
* feat: adding integration tests

* changing version

* fixing gh action

* fixing gh action

* fixing gh action

* fixing gh action

* Delete pytest.ini

* Delete pytest.ini.example

* using env vars

* adding env vars to gh actions

* feat: adding tenants tests

* added pytest to req.txt

* added baisthoery  in req.txt

* fixing tests

* feat: fixing secrets

* feat: fallback to dev url if api url not set

Co-authored-by: Jordan Taylor <Jordantay9014@outlook.com>

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -31,3 +31,15 @@ jobs:
 
       - name: "Build"
         run: python3 setup.py sdist bdist_wheel
+
+      - name: "Integration Tests"
+        run: |
+          pip install pytest
+          pytest ./integration-tests/  
+        env:
+          BT_API_KEY: ${{ secrets.BT_API_KEY }}
+          BT_MANAGEMENT_API_KEY: ${{ secrets.BT_MANAGEMENT_API_KEY }}
+          BT_BILLING_API_KEY: ${{ secrets.BT_BILLING_API_KEY }}
+          BT_CARD_REACTOR_ID: ${{ secrets.BT_CARD_REACTOR_ID }}
+
+
