--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -39,5 +39,6 @@ jobs:
         env:
           BT_API_KEY: ${{ secrets.BT_API_KEY }}
           BT_MANAGEMENT_API_KEY: ${{ secrets.BT_MANAGEMENT_API_KEY }}
+          BT_CARD_REACTOR_ID: ${{ secrets.BT_CARD_REACTOR_ID }}
 
 
