--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:
     branches: [master]
 
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
     
     steps:
@@ -14,6 +14,12 @@ jobs:
         with:
           token: ${{ secrets.SEMANTIC_RELEASE_PAT }}
       
+      - name: Setup Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+          cache: 'yarn'
+
       # Set up Python 3
       - uses: actions/setup-python@v2
         with:
@@ -23,7 +29,7 @@ jobs:
         run: python3 -m pip install --upgrade pip
       
       - name: "Install base dependencies"
-        run: python3 -m pip install setuptools wheel
+        run: python3 -m pip install setuptools wheel twine
       
       - name: "Install additional dependencies"
         run: if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
@@ -35,7 +41,9 @@ jobs:
         run: python3 setup.py sdist bdist_wheel
     
       - name: "Release"
-        uses: relekang/python-semantic-release@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          pypi_token: ${{ secrets.PYPI_TOKEN }}
+        env:
+          GH_TOKEN: ${{ secrets.SEMANTIC_RELEASE_PAT }}
+          PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
+        run: |
+          yarn install --frozen-lockfile
+          yarn release
