--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,5 @@
 [flake8]
 max-line-length=99
 
-[semantic_release]
-version_variable = setup.py:VERSION
-version_source = tag
+[metadata]
+version = 1.2.0
